Fixed settings menu being cut off at the bottom

--- a/css/style.scss
+++ b/css/style.scss
@@ -298,7 +298,7 @@ input[type="radio"]:checked+label{
     display: none;
     position: fixed;
     z-index: 1;
-    padding-top: 100px;
+    //padding-top: 100px;
     left: 0;
     top: 0;
     width: 100%;
